--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat-gpt for mac",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "electron .",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make"
